--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "commander": "^12.0.0",
-    "cron": "^3.1.6"
+    "cron": "^3.1.6",
+    "dayjs": "^1.11.10",
+    "lodash": "^4.17.21"
   }
 }
