--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "commander": "^12.0.0",
     "cron": "^3.1.6",
     "dayjs": "^1.11.10",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "rimraf": "^5.0.5"
   }
 }
